рефакторинг List.of